<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dp_2"
    android:layout_marginBottom="@dimen/dp_2"
    android:background="@color/white"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="10dp">

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="@dimen/dp_45"
        android:layout_height="@dimen/dp_45"
        android:src="@mipmap/avatar_hms" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_update_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_time"
            android:textSize="13sp"
            android:layout_marginTop="@dimen/dp_1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_follow_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_followed"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp_5"
        android:paddingTop="@dimen/dp_3"
        android:paddingEnd="@dimen/dp_5"
        android:paddingBottom="@dimen/dp_3"
        android:text="@string/followed"
        android:textColor="@color/text_followed" />
</LinearLayout>