<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:onClick="onClick"
            android:text="@string/image_back" />

        <Button
            android:id="@+id/save_sticker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:onClick="onClick"
            android:text="@string/image_sticker"
            android:visibility="gone" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:onClick="onClick"
            android:text="@string/image_filter" />

        <Button
            android:id="@+id/save_crop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:onClick="onClick"
            android:text="@string/image_crop"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/color_line_gray"
        android:gravity="center">

        <RelativeLayout
            android:id="@+id/stikcerScreenShot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center">

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <com.huawei.hms.image.vision.sticker.StickerLayout
                android:id="@+id/sticker_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/image"
                android:layout_alignTop="@+id/image"
                android:layout_alignEnd="@+id/image"
                android:layout_alignBottom="@+id/image"
                android:visibility="gone" />
        </RelativeLayout>

        <com.huawei.hms.image.vision.crop.CropLayoutView
            android:id="@+id/cropImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cropBackgroundColor="#88AA66CC"
            app:cropBorderCornerColor="@android:color/holo_blue_bright"
            app:cropBorderCornerThickness="5dp"
            app:cropBorderLineColor="@android:color/holo_green_light"
            app:cropGuidelines="on"
            app:cropGuidelinesColor="@android:color/holo_red_dark"
            app:cropSnapRadius="0dp"></com.huawei.hms.image.vision.crop.CropLayoutView>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/sticker_all"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:visibility="gone"
        >

        <Button
            android:id="@+id/art1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:onClick="onClick"
            android:background="@drawable/art1"></Button>

        <Button
            android:id="@+id/art2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:onClick="onClick"
            android:background="@drawable/art2"></Button>

        <Button
            android:id="@+id/art3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:onClick="onClick"
            android:background="@drawable/art3"></Button>

        <Button
            android:id="@+id/art4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:onClick="onClick"
            android:background="@drawable/art4"></Button>
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_filter"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/white"
        android:overScrollMode="never"
        android:visibility="gone"></androidx.recyclerview.widget.RecyclerView>

    <RadioGroup
        android:id="@+id/Edit_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#dcdcdc"
        android:orientation="horizontal"
        android:paddingTop="2dp"
        android:paddingBottom="0dp">

        <RadioButton
            android:id="@+id/crop"
            style="@style/Custom.TabRadioButton"
            android:checked="true"
            android:drawableTop="@drawable/crop"
            android:text="@string/crop" />

        <RadioButton
            android:id="@+id/filter"
            style="@style/Custom.TabRadioButton"
            android:drawableTop="@drawable/filter"
            android:text="@string/filter" />

        <RadioButton
            android:id="@+id/sticker"
            style="@style/Custom.TabRadioButton"
            android:drawableTop="@drawable/sticker"
            android:text="@string/stickers" />

    </RadioGroup>


</LinearLayout>